app/src/test/resources/programs/valid/conditionals/nestedConditionals.exe
// Nested conditionals
foo main() -> Int = {
    if true then {
        if false then {
            1
        } else {
            2
        }
    } else {
        3
    }
}
