app/src/test/resources/programs/invalid/conditionals/lackingThen.exe
// 'then' block missing required expression
foo main() -> Int = {
    if true 1 else 0;
}
